--- a/pool_pi3/index.html
+++ b/pool_pi3/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pool PI</title>
-    <script src="./node_modules/p5/lib/p5.min.js"></script>
-    <script src="./node_modules/p5/lib/addons/p5.dom.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="pool_pi3/node_modules/p5/lib/p5.min.js"></script>
+    <script src="pool_pi3/node_modules/p5/lib/addons/p5.dom.min.js"></script>
+    <script src="pool_pi3/js/main.js"></script>
 </head>
 <body>
     
