--- a/pool_pi3/index.html
+++ b/pool_pi3/index.html
@@ -7,7 +7,7 @@
     <title>Pool PI</title>
     <script src="/pool_pi3/node_modules/p5/lib/p5.min.js"></script>
     <script src="/pool_pi3/node_modules/p5/lib/addons/p5.dom.min.js"></script>
-    <script src="/pool_pi3/js/main.js"></script>
+    <script src="/pool_pi3/js/main.js" defer></script>
 </head>
 <body>
     
