--- a/pool_pi3/index.html
+++ b/pool_pi3/index.html
@@ -8,6 +8,9 @@
     <script src="/pool_pi3/node_modules/p5/lib/p5.min.js"></script>
     <script src="/pool_pi3/node_modules/p5/lib/addons/p5.dom.min.js"></script>
     <script src="/pool_pi3/js/main.js" defer></script>
+    <script src="./node_modules/p5/lib/p5.min.js"></script>
+    <script src="./node_modules/p5/lib/addons/p5.dom.min.js"></script>
+    <script src="./js/main.js" defer></script>
 </head>
 <body>
     
